--- a/css/styles.css
+++ b/css/styles.css
@@ -622,6 +622,7 @@ address {
   background-color: inherit;
   padding: 15px 16px;
   color: #ffffff;
+  margin-right: 12px;
 }
 
 .form-footer-mail::placeholder {
@@ -636,7 +637,6 @@ address {
   align-items: center;
   width: 200px;
   height: 50px;
-  margin-left: 12px;
   background: #2196f3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
@@ -794,10 +794,7 @@ address {
   min-height: 581px;
   top: 50%;
   left: 50%;
-  transform: scale(1) rotate(0);
-
   transform: translate(-50%, -50%);
-
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   background: #ffffff;
@@ -868,9 +865,7 @@ address {
   margin-bottom: 12px;
 }
 
-.modal-form-text,
-.modal-form-tel,
-.modal-form-mail {
+.modal-form-text {
   width: 100%;
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -882,15 +877,11 @@ address {
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-form-text:focus,
-.modal-form-tel:focus,
-.modal-form-mail:focus {
+.modal-form-text:focus {
   border-color: #2196f3;
 }
 
-.modal-form-text:focus + .input-icon,
-.modal-form-tel:focus + .input-icon,
-.modal-form-mail:focus + .input-icon {
+.modal-form-text:focus + .input-icon {
   fill: #2196f3;
 }
 
@@ -899,20 +890,14 @@ address {
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-input-text {
-  margin-bottom: 4px;
-}
-
 .user-text {
+  display: block;
   width: 100%;
   height: 120px;
-  color: rgba(117, 117, 117, 0.5);
   padding: 12px 16px;
   resize: none;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
-  margin-top: 4px;
-  margin-bottom: 20px;
 }
 
 .user-text::placeholder {
@@ -922,12 +907,18 @@ address {
   color: rgba(117, 117, 117, 0.5);
 }
 
-.modal-field {
+.input-wrap {
+  position: relative;
+}
+
+.form-input-text {
+  display: block;
   margin-bottom: 10px;
 }
 
-.input-wrap {
-  position: relative;
+.form-input-comment {
+  display: block;
+  margin-bottom: 20px;
 }
 
 .input-icon {
@@ -938,20 +929,28 @@ address {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-checkbox {
+.input-title {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: var(--main-text-color);
+  display: block;
+  margin-bottom: 4px;
+}
+
+.policy {
   display: flex;
   justify-content: center;
   align-items: center;
   margin-bottom: 30px;
 }
 
-.policy {
+.policy-text,
+.modal-checkbox-link {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
-  color: #757575;
-  display: flex;
-  align-items: center;
+  color: var(--main-text-color);
 }
 
 .modal-checkbox-link {
@@ -970,13 +969,9 @@ address {
   align-items: center;
 }
 
-.check-icon {
-  fill: #ffffff;
-}
-
-.modal-checkbox-text:checked + .policy .check-mark {
+.modal-checkbox-text:checked + .check-mark {
   background-color: #2196f3;
   border: none;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
