--- a/css/styles.css
+++ b/css/styles.css
@@ -569,7 +569,7 @@ address {
   margin-right: 70px;
 }
 
-.footer-sotial-list {
+.footer-social-list {
   display: flex;
   justify-content: center;
 }
@@ -808,7 +808,7 @@ address {
 .modal-close {
   position: absolute;
   top: 8px;
-  right: 6px;
+  right: 8px;
 
   display: flex;
   justify-content: center;
@@ -874,6 +874,7 @@ address {
   padding-right: 12px;
   padding-bottom: 11px;
   padding-left: 42px;
+  margin-top: 4px;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -895,6 +896,7 @@ address {
   width: 100%;
   height: 120px;
   padding: 12px 16px;
+  margin-top: 4px;
   resize: none;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
@@ -908,12 +910,17 @@ address {
 }
 
 .input-wrap {
+  display: block;
   position: relative;
 }
 
 .form-input-text {
   display: block;
   margin-bottom: 10px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: var(--main-text-color);
 }
 
 .form-input-comment {
@@ -929,14 +936,14 @@ address {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.input-title {
+/* .input-title {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.01em;
   color: var(--main-text-color);
   display: block;
   margin-bottom: 4px;
-}
+} */
 
 .policy {
   display: flex;
@@ -967,11 +974,11 @@ address {
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-checkbox-text:checked + .check-mark {
   background-color: #2196f3;
   border: none;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
